Fix aligning between the status bar and the info bar.

--- a/assets/styles/firefly.css
+++ b/assets/styles/firefly.css
@@ -1,6 +1,6 @@
 .Filament-loader--firefly {
     position: absolute;
-    top: 34px;
+    top: 32px;
     left: 0;
     bottom: 0;
     right: 0;
